--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/angel/Downloads/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/eclipse/MiEntidadVestido/jcalendar-1.4.jar"/>
-=======
 	<classpathentry kind="lib" path="C:/Users/ferma/Downloads/Jar/jcalendar-1.4/jcalendar-1.4.jar"/>
->>>>>>> e9d821e3f0269d3e588eac32e35358ed8d17900a
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
